# gitkay

./: AGENTS.md  CLAUDE.md  Cargo.toml  OVERVIEW.md  README.md  build.sh  install.sh
.github/workflows/: ci.yml  release.yml
packaging/: PKGBUILD
src/: cli.rs  config.rs  diff.rs  diff_cache.rs  highlight.rs  main.rs  word_diff.rs
