[package]
name = "gitkay"
version = "1.2.0"
edition = "2024"
description = "A fast, native Wayland git history viewer — gitk, but okay"
license = "MIT"
repository = "https://github.com/Marenz/gitkay"
keywords = ["git", "history", "viewer", "wayland", "egui"]
categories = ["development-tools", "visualization"]

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
git2 = "0.19"
chrono = "0.4"
arboard = "3"
notify = "7"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
fontdb = "0.23.0"
dirs = "6.0.0"
