[package]
name = "gitkay"
version = "1.2.0"
edition = "2024"
description = "A fast, native Wayland git history viewer — gitk, but okay"
license = "MIT"
repository = "https://github.com/Marenz/gitkay"
keywords = ["git", "history", "viewer", "wayland", "egui"]
categories = ["development-tools", "visualization"]

[dependencies]
eframe = { version = "0.34", features = ["persistence"] }
egui = "0.34"
git2 = "0.21"
chrono = "0.4"
arboard = "3"
notify = "8"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
fontdb = "0.23.0"
dirs = "6.0.0"
two-face = { version = "0.5.1", default-features = false, features = ["syntect-default-fancy"] }
log = "0.4.33"
env_logger = "0.11.10"

[dev-dependencies]
tempfile = "3"

# Full opt-in lint groups, minus the categories that don't fit this codebase
# (each allow states why). Note: group-level enables mean a stable toolchain
# bump can surface new lints and fail CI's -D warnings gate — fix or allow then.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# f32-heavy egui layout code converts usize/i32 <-> f32 constantly.
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
# Exact float comparison against known config-default literals is deliberate.
float_cmp = "allow"
# mul_add micro-optimizations don't matter for UI layout math.
suboptimal_flops = "allow"
# Immediate-mode UI functions are naturally long.
too_many_lines = "allow"
# Config/scope structs legitimately carry independent bool flags.
struct_excessive_bools = "allow"
# Layout math uses short/similar coordinate names (x/y/w/h, x0/x1).
similar_names = "allow"
many_single_char_names = "allow"
